<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Demo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to APT Android Demo</string>
    <string name="uploadImage">Upload Image</string>
    <string name="upload_hint">Add a caption for photo</string>
    <string name="choose_from_library">Choose From Library</string>
    <string name="title_activity_display_images">DisplayImages</string>
    <string name="imagePage">View All Images</string>
    <string name="uploadImageActivity"> Upload a new image</string>
    <string name="title_activity_image_upload">ImageUpload</string>



    <string name="sign_out_button_name">Sign out</string>
    <string name="revoke_access_button_name">Revoke</string>

    <string name="status_sign_in_required">Sign-in required</string>
    <string name="status_sign_in_error">Error signing in: %s</string>
    <string name="status_loading">Loading…</string>
    <string name="status_signing_in">Signing in with Google+…</string>
    <string name="status_signed_out">Signed out</string>
    <string name="status_revoke_access">Revoked access</string>
    <string name="status_revoke_access_error">Error revoking access: %s</string>
    <string name="signed_in_as">Signed in as %s</string>

</resources>
