<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/response_scroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Homepage">

        <TextView
            android:text="@string/welcome"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="40sp"
            android:paddingBottom = "40sp"
            />

        <Button
            android:id="@+id/view_all_images"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/imagePage"
            android:onClick="viewAllImages"
            />

        <Button
            android:id="@+id/choose_from_library"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_from_library"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/thumbnail"
            android:adjustViewBounds="true"
            />

        <EditText
            android:id="@+id/upload_message"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:hint="@string/upload_hint" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uploadImage"
            android:clickable="false"
            android:id="@+id/upload_to_server"
            />
    </LinearLayout>
</ScrollView>